# personal-agent

./: .cursorrules  .gitignore  Eva_9000.db  README.md  chat.md  debug.py  librarian_9000.db  pyproject.toml  run.py  test.py  tree.txt
docs/: docling.md  file_manager_toolkit.md  init_agent.md  memory.md  memory_agent_intergration.md  short_term_memory.md  tools.md
src/: config.py
src/agent/: base_agent.py  error_prompt.py  eva.py  librarian_agent.py
src/agent/debug_agent/: debug_agent.py  inital_system_prompt.md  run.py
src/agent/delta/: inital_system_prompt.md  run.py
src/agent/delta_3000/: __init__.py  run.py
src/agent/eva/: __init__.py  eva.py  inital_system_prompt.md  run.py
src/agent/memory_toolkit/: dynamic_tools.py  end_conversation_memory_handler.py
src/agent/tools/: prompt.py
src/agent/tools/search/: __init__.py  (+3 more)
src/core/prompt/: error_prompt.py  system.py  tool_prompt.py
src/core/reasoning/: base.py  chat.py  react.py  react_v2.py
src/inputer/: base.py  console_inputer.py
src/interface/: __init__.py  base.py  console.py  multi_printer.py
src/log/: __init__.py  base.py  console.py  multi_printer.py
src/memory/: __init__.py  memory_manager.py  models.py
src/memory/database/: base.py  sqlite.py
src/memory/embeddings/: __init__.py  base.py  cache.py  gemini.py  openai.py  sentence_transformer.py
src/memory/memory_toolkit/: dynamic_flow.py  long_term.py  note_taking.py  short_term.py
src/memory/retrieval/: reranker.py
src/util/: rotating_list.py
tests/: test_advanced_reranker.py  test_sqlite_db.py  test_wikipedia_tool.py
(+14 files in other folders)
