[project]
name = "personal-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckduckgo-search>=6.3.3",
    "google-generativeai>=0.8.3",
    "loguru>=0.7.2",
    "mirascope[gemini,litellm,tenacity]>=1.6.0",
    "pyhumps>=3.8.0",
    "pyperclip>=1.9.0",
    "pyrootutils>=1.0.4",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "rerankers[api]>=0.5.3",
    "rich>=13.9.3",
    "sqlite-vec>=0.1.3",
    "wikipedia>=1.4.0",
]
